Bug Fixes
1. Fix the display of output summary in .outputBox
2. Increase the padding of summary size options.
3. Decrease the scrollbar width.

--- a/static/styles/input.css
+++ b/static/styles/input.css
@@ -1,54 +1,6 @@
 @import url('./partials/nav.css');
+@import url('./partials/utility.css');
 @import url('./partials/footer.css');
-
-/*Styling Classes*/
-:root {
-    --black: #333333;
-    --white: #ecf0f1;
-}
-
-.white {
-    color: #ecf0f1;
-}
-
-.black {
-    color: #333333;
-}
-
-.head3 {
-    font-size: 20px;
-}
-
-.head4 {
-    font-size: 15px;
-}
-
-.montserrat {
-    font-family: 'Montserrat', sans-serif;
-}
-
-.openSans {
-    font-family: 'Roboto', sans-serif;
-}
-
-
-/*Scroll-Bar*/
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-::-webkit-scrollbar-track {
-    background: #00000000;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #888888;
-    border-radius: 2.5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555555;
-}
 
 .section1 {
     min-height: 100vh;
@@ -139,29 +91,6 @@
     background: white;
 }
 
-/*Pop-Up*/
-.container {
-    position: relative;
-    top: -8px;
-    display: inline-block;
-}
-
-.popup {
-    display: none;
-    position: absolute;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    padding: 2px;
-    z-index: 1;
-    top: -30px;
-    left: -10px;
-}
-
-.container:hover .popup {
-    display: block;
-}
-
 /*Part2 Code*/
 .part2 {
     width: 100%;
@@ -189,13 +118,14 @@
 
     background-color: var(--white);
 
-    padding: 6.25px;
+    padding: 10px;
     box-sizing: border-box;
     border: none;
     outline: none;
 
     overflow-x: hidden;
-    word-break: break-all;
+    white-space: pre-line;
+    overflow-wrap: break-word;
 }
 
 .part2 div {
@@ -309,7 +239,7 @@
     }
 
     .part2 textarea {
-        padding: 4.5px;
+        padding: 6.25px;
     }
 
     .part2>div:first-child {
